# Nexa_Auto

./: .gitignore  Dockerfile  Llama-FineTune  Llama-FineTune.ipynb  NexaAuto.txt  OLMO-FineTune  Pixel_Extract.py  Qwen-FineTune  README.md  cli.py  doc.md  mistral-finetune.ipynb  pyproject.toml  requirements.txt  session_server.py  trainer_server.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
Nexa_Auto/: __init__.py
Notebooks/: mistral-finetune.ipynb
go_cli/: Logparser.go  go.mod  go.sum  main.go  main_2.go  splash.go
