[project]
name = "nexa-auto"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
nexa-auto = "Nexa_Auto.cli:main"
